// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value Stream Analytics LabelsSelector with no item selected will render the label selector 1`] = `
"<gl-dropdown-stub text=\\"\\" toggle-class=\\"overflow-hidden\\" class=\\"w-100\\"><template></template>
  <gl-dropdown-item-stub active=\\"true\\">Select a label
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
    roses
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
    some space
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
    violets
  </gl-dropdown-item-stub>
</gl-dropdown-stub>"
`;

exports[`Value Stream Analytics LabelsSelector with selectedLabelId set will render the label selector 1`] = `
"<gl-dropdown-stub text=\\"\\" toggle-class=\\"overflow-hidden\\" class=\\"w-100\\"><template></template>
  <gl-dropdown-item-stub>Select a label
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
    roses
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
    some space
  </gl-dropdown-item-stub>
  <gl-dropdown-item-stub active=\\"true\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
    violets
  </gl-dropdown-item-stub>
</gl-dropdown-stub>"
`;
